<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewItemActivity">

    <Button
        android:id="@+id/salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="56dp"
        android:text="@string/bt_cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txt_nome"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="398dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_titulo"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Descriçao"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/txt_lero"
        android:textAlignment="viewStart"
        android:textDirection="locale"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nome" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="114dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/salvar"
        app:layout_constraintStart_toStartOf="parent"><![CDATA[>

        ]]>

        <RadioButton
            android:id="@+id/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_high" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_medium" />

        <RadioButton
            android:id="@+id/low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_low" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>